adding training notebook

--- a/TrainingTransformer_DrillingData.ipynb
+++ b/TrainingTransformer_DrillingData.ipynb
@@ -24,7 +24,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from Trainer import Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = Trainer(  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.loadData( r\"path\\to\\folder\\containing\\annotated\\csvfiles\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.trainModel( \"transformer\" )"
    ]
   }
  ],
