correcting py files referencing classes

--- a/COLAB_READY_TRAINING_TRANSFORMER.ipynb
+++ b/COLAB_READY_TRAINING_TRANSFORMER.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "9RV9k_v6HM3L"
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "background_save": true,
@@ -604,25 +604,7 @@
       "[WARNING]......... The size of the sliding window has not been specified. By default, it has been set on 5.\n",
       "[INFO]......... Starting training...\n",
       "[INFO]......... Working on: GPU, model NVIDIA GeForce RTX 4070 Laptop GPU\n",
-      "[INFO]......... Extracting features for dataset No. 1.\n",
-      "[INFO]......... The training dataset has the following shape: 2102675 X 7. The response: (2102675, 10)\n",
-      "[INFO]......... Before undersampling, the counts per class are: {0: 44914, 1: 81350, 2: 54404, 3: 29756, 4: 68258, 5: 23810, 6: 963756, 7: 661549, 8: 149103, 9: 25770}.\n",
-      "[INFO]......... After undersampling, the counts per class are: {0: 44914, 1: 81350, 2: 54404, 3: 29756, 4: 68258, 5: 23810, 6: 149103, 7: 149103, 8: 149103, 9: 25770}.\n",
-      "[INFO]......... Size of the training data: 0.11 GB for the input matrix and 0.01 GB for the response variable.\n",
-      "[INFO]......... Successfully saved scaler: scaler_transformer.pkl\n",
-      "[INFO]......... Data loaded to the torch DataLoader object.\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'k' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m trainLosses, model\u001b[38;5;241m=\u001b[39mtrainer\u001b[38;5;241m.\u001b[39mtrainModel( \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtransformer\u001b[39m\u001b[38;5;124m\"\u001b[39m,batchSize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1024\u001b[39m,nEpochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m )\n",
-      "Cell \u001b[1;32mIn[4], line 104\u001b[0m, in \u001b[0;36mTrainer.trainModel\u001b[1;34m(self, modelType, batchSize, nEpochs, learningRate, currentCheckPointPath, saveModel, savePath, saveScaler, scalerPath, stratifyData, fitScaler, **kwargs)\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger\u001b[38;5;241m.\u001b[39minfoMsg( \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData loaded to the torch DataLoader object.\u001b[39m\u001b[38;5;124m\"\u001b[39m )\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m( nEpochs ):\n\u001b[1;32m--> 104\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m epoch\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlogger\u001b[38;5;241m.\u001b[39minfoMsg( \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInitiating forward pass (epoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) for dataset \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m )\n\u001b[0;32m    105\u001b[0m     model\u001b[38;5;241m.\u001b[39mtrain(  )\n\u001b[0;32m    106\u001b[0m     runningLoss         \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'k' where it is not associated with a value"
+      "[INFO]......... Extracting features for dataset No. 1.\n"
      ]
     }
    ],
