--- a/AnnotationNotebook_5632.ipynb
+++ b/AnnotationNotebook_5632.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,49 +72,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\abrah\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n",
-      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:57: FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
-      "  df                  = pd.read_csv( pathCSV,parse_dates=[parseDates],date_format=dateFormat,skiprows=sRows )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished rig state update. A total of 2866511 states were added to the DF, which in turn, has 2866511 rows\n"
+      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:53: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "  if (not timeColumn is 'index'):\n"
      ]
     }
    ],
    "source": [
     "from TimeSeries import TimeSeries\n",
-    "ts          = TimeSeries(   pathCSV=\"src/78b32.csv\", #path to the CSV file containing the time series data\n",
+    "ts          = TimeSeries(   pathCSV=\"src/ANNOTATED_5632.csv\", #path to the CSV file containing the time series data\n",
     "                            dataframe=None, #if the time series is in a DataFrame in memory, use this input instead and set pathCSV to None.\n",
-    "                            preAnnotator=pa, #PreAnnotator object. If you want to annotate from scratch, without any pre-annotation logic, set this to None.\n",
-    "                            renameDimensionsJSON=\"renameDict78b.json\", #path to JSON file containing new names for the columns in the CSV. If you wish to work with the same CSV columns, set to None.\n",
+    "                            preAnnotator=None, #PreAnnotator object. If you want to annotate from scratch, without any pre-annotation logic, set this to None.\n",
+    "                            renameDimensionsJSON=None, #path to JSON file containing new names for the columns in the CSV. If you wish to work with the same CSV columns, set to None.\n",
     "                            trimDimensionsOfInterest=True, #If true, only the columns in the JSON file will be kept. The rest will be deleted from the TimeSeries object.\n",
-    "                            timeColumn=[\"YYYY/MM/DD\",\"HH:MM:SS\"], #Name of the CSV column containing the time index. \n",
-    "                            timeAxisFormat=None, #Format of the time index in the CSV file. See documentation for options.\n",
+    "                            timeColumn=\"Date__\", #Name of the CSV column containing the time index. \n",
+    "                            timeAxisFormat=\"%Y-%m-%d %H:%M:%S\", #Format of the time index in the CSV file. See documentation for options.\n",
     "                            unitsRow=False, #If true, the second row of the CSV will be ignored.\n",
     "                            deleteNans=True, #Whether you wish to delete NaNs.\n",
     "                            nanPlaceHolder=-999.25, #A placeholder for NaNs. If there is no placeholder, set to None.\n",
-    "                            labelColumn=None ) #Name of the CSV column containing the labels. If the CSV does not contain labels, set to None.\n"
+    "                            labelColumn=\"Rig State\" ) #Name of the CSV column containing the labels. If the CSV does not contain labels, set to None.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts.data.to_csv( 'labeled78b.csv',index=False )"
+    "ts.data.to_csv( 'labeled5632_11182024.csv',index=False )"
    ]
   },
   {
@@ -134,40 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:401: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_xticklabels( ax.get_xticklabels( ),fontdict=fDictTicks )\n",
       "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:402: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "  ax.set_xticklabels( ax.get_xticklabels( ),fontdict=fDictTicks )\n",
+      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:403: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_yticklabels( ax.get_yticklabels( ),fontdict=fDictTicks )\n",
-      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:418: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:419: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax2.set_yticklabels( ax2.get_yticklabels( ),fontdict=fDictTicks )\n",
-      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:462: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
-      "  plt.tight_layout( w_pad=1 )\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mqt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#This magic command (matplotlib qt) will enable the qt backend. Plots will appear in a new window.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m ts\u001b[38;5;241m.\u001b[39mannotate( hoursPerPlot\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,activityCodes\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m111\u001b[39m,\u001b[38;5;241m112\u001b[39m,\u001b[38;5;241m114\u001b[39m,\u001b[38;5;241m115\u001b[39m,\u001b[38;5;241m116\u001b[39m,\u001b[38;5;241m117\u001b[39m,\u001b[38;5;241m118\u001b[39m,\u001b[38;5;241m119\u001b[39m,\u001b[38;5;241m120\u001b[39m,\u001b[38;5;241m121\u001b[39m] )\n",
-      "File \u001b[1;32mc:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:465\u001b[0m, in \u001b[0;36mTimeSeries.annotate\u001b[1;34m(self, hoursPerPlot, rangeIdxPerPlot, figWidth, figHeight, activityCodes, cumulativePersistance, **kwargs)\u001b[0m\n\u001b[0;32m    463\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow(  )            \n\u001b[0;32m    464\u001b[0m MessageBox \u001b[38;5;241m=\u001b[39m ctypes\u001b[38;5;241m.\u001b[39mwindll\u001b[38;5;241m.\u001b[39muser32\u001b[38;5;241m.\u001b[39mMessageBoxW\n\u001b[1;32m--> 465\u001b[0m MessageBox(  \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mClick to continue after finishing annotating the current plot\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mContinue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m  ) \n\u001b[0;32m    466\u001b[0m plt\u001b[38;5;241m.\u001b[39mclose(  )\n\u001b[0;32m    468\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimeCol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "c:\\Users\\abrah\\OneDrive\\Applications Sandbox\\26_TIME_SERIES_ANNOTATOR\\TimeSeries.py:463: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
+      "  plt.tight_layout(  )\n"
      ]
     }
    ],
    "source": [
     "%matplotlib qt\n",
     "#This magic command (matplotlib qt) will enable the qt backend. Plots will appear in a new window.\n",
-    "ts.annotate( hoursPerPlot=2,activityCodes=[111,112,114,115,116,117,118,119,120,121] )"
+    "ts.annotate( hoursPerPlot=0.5,activityCodes=[111,112,114,115,116,117,118,119,120,121,124] )"
    ]
   },
   {
